[package]
name = "tinymd"
version = "1.0.0"
authors = ["Eddy de Boer <eddy.de.boer@medicore.nl>"]
edition = "2018"
description = "A tiny markdown compiler based on Jesse's tutorials."
homepage = "https://jesselawson.org/rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
